--- a/src/pages/tabbing/tabbing.html
+++ b/src/pages/tabbing/tabbing.html
@@ -1,5 +1,5 @@
 <ion-tabs>
+    <ion-tab [root]="bluetoothRoot" tabTitle="Connect" tabIcon="information-circle"></ion-tab>
     <ion-tab [root]="ketelRoot" tabTitle="Ketel" tabIcon="information-circle"></ion-tab>
     <ion-tab [root]="receptRoot" tabTitle="Recept" tabIcon="information-circle"></ion-tab>
-    <ion-tab [root]="bluetoothRoot" tabTitle="Bluetooth" tabIcon="information-circle"></ion-tab>
 </ion-tabs>
