--- a/src/pages/tabbing/tabbing.html
+++ b/src/pages/tabbing/tabbing.html
@@ -1,5 +1,6 @@
 <ion-tabs>
     <ion-tab [root]="bluetoothRoot" tabTitle="Connect" tabIcon="bluetooth"></ion-tab>
     <ion-tab [root]="ketelRoot" tabTitle="Ketel" tabIcon="thermometer"></ion-tab>
-    <ion-tab [root]="receptRoot" tabTitle="Recept" tabIcon="beer"></ion-tab>
+    <ion-tab [root]="receptRunnerRoot" tabTitle="Recept Uitvoeren" tabIcon="beer"></ion-tab>
+    <ion-tab [root]="receptRoot" tabTitle="Recept" tabIcon="flask"></ion-tab>
 </ion-tabs>
