--- a/src/pages/recept/recept.html
+++ b/src/pages/recept/recept.html
@@ -15,4 +15,24 @@
 
 <ion-content padding>
 
+  <form [formGroup]="receptForm" (ngSubmit)="storeForm()">
+    <ion-item>
+      <ion-label>Schema eerste temperatuur</ion-label>
+      <ion-input type="number" formControlName="temperature1"></ion-input>
+    </ion-item>
+    <ion-item>
+      <ion-label>Schema eerste temp tijd</ion-label>
+      <ion-input type="number" formControlName="time1"></ion-input>
+    </ion-item>
+    <ion-item>
+      <ion-label>Schema tweede temperatuur</ion-label>
+      <ion-input type="number" formControlName="temperature2"></ion-input>
+    </ion-item>
+    <ion-item>
+      <ion-label>Schema tweede temp tijd</ion-label>
+      <ion-input type="number" formControlName="time2"></ion-input>
+    </ion-item>
+    <button ion-button type="submit" [disabled]="!receptForm.valid">Submit</button>
+  </form>
+
 </ion-content>
