added recipe runner page and provider

--- a/src/pages/receptrunner/receptrunner.html
+++ b/src/pages/receptrunner/receptrunner.html
@@ -19,6 +19,7 @@
       {{receptStap.temperatuur}} > {{receptStap.tijd}}
     </span>
   </ion-item>
-
+  <span>{{receptProvider.timerDisplay}}</span>
+  <button ion-button block (click)="receptProvider.run()">start</button>
 
 </ion-content>
